--- a/view/crearPregunta_view.mustache
+++ b/view/crearPregunta_view.mustache
@@ -7,10 +7,17 @@
     }
 </style>
 <div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
-
     <div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
         <h1 class="font-bold text-5xl text-center text-indigo-100">Crear pregunta</h1>
         <div class="bg-white p-12 rounded-lg shadow-lg w-[90%] sm:w-[500px] mt-8">
+            <div class="w-full flex justify-end">
+                <button class="hidden" id="reproducirMusica">
+                    <i class="fa-solid fa-volume-high fa-2xl"></i>
+                </button>
+                <button id="pausarMusica">
+                    <i class="fa-solid fa-volume-xmark fa-2xl"></i>
+                </button>
+            </div>
             <form action="crearPregunta" method="post">
                 <input id="pregunta" name="pregunta" type="text" placeholder="Insertar pregunta"
                        value="{{datos.pregunta}}"
