--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -1,17 +1,19 @@
 {{> header}}
-<!-- component -->
 <body class="font-mono bg-gray-400">
-<!-- Container -->
 <div class="flex items-center justify-center my-8 2xl:my-0 2xl:h-screen">
-    <!-- Row -->
     <div class="flex w-full md:w-3/4 xl:w-3/5">
-        <!-- Col -->
-        <div
-                class="w-full h-auto bg-gray-400 hidden lg:block lg:w-5/12 bg-cover rounded-l-lg"
-                style="background-image: url('https://cdn.aarp.net/content/dam/aarp/health/healthy-living/2022/04/1140-paper-word-bubbles-question-marks-esp.jpg')"
+        <div class="w-full h-auto bg-gray-400 hidden lg:block lg:w-5/12 bg-cover rounded-l-lg"
+             style="background-image: url('https://cdn.aarp.net/content/dam/aarp/health/healthy-living/2022/04/1140-paper-word-bubbles-question-marks-esp.jpg')"
         ></div>
-        <!-- Col -->
         <div class="w-full lg:w-7/12 bg-white rounded-lg lg:rounded-l-none">
+            <div class="w-full flex justify-end pr-4 pt-4">
+                <button class="hidden" id="reproducirMusica">
+                    <i class="fa-solid fa-volume-high fa-2xl"></i>
+                </button>
+                <button id="pausarMusica">
+                    <i class="fa-solid fa-volume-xmark fa-2xl"></i>
+                </button>
+            </div>
             <h3 class="p-3 font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase">¡Creá una
                 cuenta!</h3>
             <form class="px-6 mb-2 bg-white rounded" id="form-registro"
@@ -46,8 +48,6 @@
                         <span class="text-sm bg-red-200 text-red-800">{{errores.errorApellido}}</span>
                     </div>
                 </div>
-
-
                 <div class="mb-2 md:flex md:justify-center">
                     <div class="w-full md:w-1/2 mb-2 md:mr-2 md:mb-0">
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="username">
@@ -64,24 +64,22 @@
                     </div>
                     <div class="w-full md:w-1/2 md:ml-2">
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="localidad">
-                            País y Ciudad
+                            País
                         </label>
                         <select
                                 class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                 id="localidad"
                                 name="localidad"
                         >
-                            <option value="Argentina" >Argentina</option>
-                            <option value="Chile" >Chile</option>
+                            <option value="Argentina">Argentina</option>
+                            <option value="Chile">Chile</option>
                             <option value="Peru">Perú</option>
-                            <option value="Colombia" >Colombia</option>
+                            <option value="Colombia">Colombia</option>
                             <option value="Otro">Otro</option>
                         </select>
                         <span class="text-sm bg-red-200 text-red-800">{{errores.errorPaisCiudad}}</span>
                     </div>
                 </div>
-
-
                 <div class="mb-2 md:flex md:justify-center">
                     <div class="w-full md:w-1/2 mb-2 md:mr-2 md:mb-0">
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="sexo">
@@ -92,8 +90,8 @@
                                 id="sexo"
                                 name="sexo"
                         >
-                            <option value="M" >M</option>
-                            <option value="F" >F</option>
+                            <option value="M">M</option>
+                            <option value="F">F</option>
                             <option value="Otro">Otro</option>
                         </select>
                         <span class="text-sm bg-red-200 text-red-800">{{errores.errorSexo}}</span>
@@ -113,8 +111,6 @@
                         <span class="text-sm bg-red-200 text-red-800">{{errores.errorAnoNacimiento}}</span>
                     </div>
                 </div>
-
-
                 <div class="w-full mb-2">
                     <label class="block mb-2 text-sm font-bold text-gray-700" for="email">
                         Email
@@ -156,8 +152,6 @@
                         <span class="text-sm bg-red-200 text-red-800">{{errores.errorRepetirContrasena}}</span>
                     </div>
                 </div>
-
-
                 <div class="flex h-screen:40vh justify-center items-center">
 
                     <div class="flex items-center shadow-md space-x-6 bg-white p-3 mb-3 rounded-md">
@@ -180,10 +174,8 @@
                 </div>
                 <span class="text-sm bg-red-200 text-red-800">{{errores.errorFotoPerfil}}</span>
                 <div class="text-center">
-                    <button
-                            class="w-full my-2 px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
-                            type="submit"
-                    >
+                    <button class="w-full my-2 px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
+                            type="submit">
                         Registrarse
                     </button>
                 </div>
