--- a/view/jugadoresPais_view.mustache
+++ b/view/jugadoresPais_view.mustache
@@ -14,7 +14,7 @@
                 Lobby
             </a>
         </li>
-        <div class="flex items-center">
+        <li class="flex items-center">
             <svg aria-hidden="true" class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
@@ -23,7 +23,6 @@
             </svg>
             <a href="/tpFinal/administrador/estadisticas"
                class="ml-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ml-2 dark:text-gray-400 dark:hover:text-white">Estadisticas</a>
-        </div>
         </li>
         <li aria-current="page">
             <div class="flex items-center">
@@ -37,10 +36,18 @@
             </div>
         </li>
     </ol>
+    <div class="w-full flex justify-end pr-6">
+        <button class="hidden" id="reproducirMusica">
+            <i class="fa-solid fa-volume-high fa-2xl"></i>
+        </button>
+        <button id="pausarMusica">
+            <i class="fa-solid fa-volume-xmark fa-2xl"></i>
+        </button>
+    </div>
 </nav>
 <div class="mx-8 my-2">
     <p class="my-2 text-xl font-semi-bold">USUARIOS POR PAIS</p>
-    <form action="/tpFinal/administrador/cantUsuariosPais" method="GET" class="flex items-center">
+    <form id="primerFormulario" action="/tpFinal/administrador/cantUsuariosPais" method="GET" class="flex items-center">
         <select name="filtro" class="border border-solid border-gray-500 w-36 p-2 mx-2 focus:outline-none">
             <option value="dia" {{#filtroDia}}selected{{/filtroDia}}>Día</option>
             <option value="semana" {{#filtroSemana}}selected{{/filtroSemana}}>Semana</option>
@@ -54,30 +61,45 @@
     </form>
 </div>
 <div class="flex flex-col items-center justify-center">
-    <h1 id="chart_title" class="text-3xl"></h1>
+    <h1 class="text-3xl">Usuarios por país por
+        {{#filtroAnio}}año{{/filtroAnio}}
+        {{#filtroMes}}mes{{/filtroMes}}
+        {{#filtroSemana}}semana{{/filtroSemana}}
+        {{#filtroDia}}día{{/filtroDia}}</h1>
     <div id="chart_div" class="flex justify-center my-3"></div>
-    <button id="generar_pdf_btn" type="button"
-            class="border border-solid border-gray-500 w-24 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200">
-        Generar PDF
-    </button>
+    <form id="segundoFormulario" action="/tpFinal/administrador/convertirAPdfUsuariosPorPais" method="GET"
+          class="flex items-center">
+        <input type="hidden" name="filtro">
+        <button type="button"
+                class="border border-solid border-gray-500 w-24 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200"
+                onclick="submitPdfForm()">Hacer PDF
+        </button>
+    </form>
 </div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
+    function submitPdfForm() {
+        const filtro = document.querySelector('#primerFormulario select[name="filtro"]').value;
+        document.querySelector('#segundoFormulario input[name="filtro"]').value = filtro;
+        let form = document.querySelector('#segundoFormulario');
+        let url = form.getAttribute('action');
+        let queryString = form.getAttribute('method') === 'GET' ? '?' + new URLSearchParams(new FormData(form)).toString() : '';
+        let newTab = window.open(url + queryString, '_blank');
+        newTab.focus();
+    }
+
     google.charts.load('current', {packages: ['corechart']});
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-        let cantidadUsuariosTotal = {{{cantidadUsuariosTotal}}};
         let data = new google.visualization.DataTable();
-        let titulo_grafico = document.getElementById('chart_title');
 
         {{#filtroDia}}
-            titulo_grafico.innerText = 'Usuarios por pais por día.';
             data.addColumn('string', 'Días');
-            data.addColumn('number', 'Argentinos');
-            data.addColumn('number', 'Chilenos');
-            data.addColumn('number', 'Peruanos');
-            data.addColumn('number', 'Colombianos');
+            data.addColumn('number', 'Argentina');
+            data.addColumn('number', 'Chile');
+            data.addColumn('number', 'Perú');
+            data.addColumn('number', 'Colombia');
             data.addColumn('number', 'Otros');
 
             let ultimos7Dias = [];
@@ -108,12 +130,11 @@
         {{/filtroDia}}
 
         {{#filtroSemana}}
-            titulo_grafico.innerText = 'Usuarios por pais por semana.';
             data.addColumn('string', 'Semanas');
-            data.addColumn('number', 'Argentinos');
-            data.addColumn('number', 'Chilenos');
-            data.addColumn('number', 'Peruanos');
-            data.addColumn('number', 'Colombianos');
+            data.addColumn('number', 'Argentina');
+            data.addColumn('number', 'Chile');
+            data.addColumn('number', 'Perú');
+            data.addColumn('number', 'Colombia');
             data.addColumn('number', 'Otros');
 
             let fechas = [];
@@ -145,12 +166,11 @@
         {{/filtroSemana}}
 
         {{#filtroMes}}
-            titulo_grafico.innerText = 'Usuarios por pais por mes.';
             data.addColumn('string', 'Meses');
-            data.addColumn('number', 'Argentinos');
-            data.addColumn('number', 'Chilenos');
-            data.addColumn('number', 'Peruanos');
-            data.addColumn('number', 'Colombianos');
+            data.addColumn('number', 'Argentina');
+            data.addColumn('number', 'Chile');
+            data.addColumn('number', 'Perú');
+            data.addColumn('number', 'Colombia');
             data.addColumn('number', 'Otros');
             let meses = [
                 'Enero',
@@ -181,12 +201,11 @@
         {{/filtroMes}}
 
         {{#filtroAnio}}
-            titulo_grafico.innerText = 'Usuarios por pais por año.';
             data.addColumn('number', 'Año');
-            data.addColumn('number', 'Argentinos');
-            data.addColumn('number', 'Chilenos');
-            data.addColumn('number', 'Peruanos');
-            data.addColumn('number', 'Colombianos');
+            data.addColumn('number', 'Argentina');
+            data.addColumn('number', 'Chile');
+            data.addColumn('number', 'Perú');
+            data.addColumn('number', 'Colombia');
             data.addColumn('number', 'Otros');
 
             let anios = {{anios}};
@@ -204,11 +223,9 @@
             }
         {{/filtroAnio}}
 
-
-
         let options = {
             curveType: 'function',
-            legend: {position: 'bottom'},
+            legend: {position: 'right'},
             width: Math.floor(window.innerWidth * 0.5),
             height: 400,
             hAxis: {
@@ -223,14 +240,6 @@
 
         chart.draw(data, options);
     }
-
-    document.getElementById('generar_pdf_btn').addEventListener('click', function () {
-        var chartDiv = document.getElementById('chart_div');
-
-        html2pdf()
-                .from(chartDiv)
-                .save('grafico.pdf');
-    });
 </script>
 </body>
 </html>
