--- a/view/ranking_view.mustache
+++ b/view/ranking_view.mustache
@@ -9,6 +9,14 @@
 <div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
     <h1 class="font-bold text-5xl text-center text-indigo-100">Ranking de jugadores</h1>
     <div class="w-[90%] sm:w-auto bg-white p-8 rounded-lg shadow-lg mt-8">
+        <div class="w-full flex justify-end pb-6">
+            <button class="hidden" id="reproducirMusica">
+                <i class="fa-solid fa-volume-high fa-2xl"></i>
+            </button>
+            <button id="pausarMusica">
+                <i class="fa-solid fa-volume-xmark fa-2xl"></i>
+            </button>
+        </div>
         <div class="w-full border-b border-gray-200 shadow overflow-x-scroll md:overflow-x-hidden">
             <table class="w-full divide-y divide-indigo-700 ">
                 <thead class="bg-gray-50">
