--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -37,32 +37,36 @@
     </div>
 </nav>
 <h1 class="text-center text-4xl font-bold my-20">ESTADISTICAS</h1>
-<div class="w-1/2 flex justify-center items-center mx-auto my-4">
+<div class="w-1/2 flex flex-wrap justify-center items-center mx-auto my-4">
     <a href="/tpFinal/administrador/cantJugadores"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">JUGADORES
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">JUGADORES
         NUEVOS
     </a>
     <a href="/tpFinal/administrador/statsPreguntas"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PREGUNTAS
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PREGUNTAS
     </a>
     <a href="/tpFinal/administrador/cantPartidasJugadas"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PARTIDAS
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PARTIDAS
         JUGADAS
     </a>
     <a href="/tpFinal/administrador/cantUsuariosEdad"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS
         POR EDAD
     </a>
     <a href="/tpFinal/administrador/cantUsuariosSexo"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS
         POR SEXO
     </a>
     <a href="/tpFinal/administrador/cantUsuariosPais"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS
         POR PAIS
     </a>
     <a href="/tpFinal/administrador/porcentajeAciertoPorJugador"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PORCENTAJE
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PORCENTAJE
         ACIERTO
+    </a>
+    <a href="/tpFinal/administrador/comprasTrampitas"
+       class="border border-solid border-gray-500 w-32 h-16 p-2 m-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">COMPRAS
+        TRAMPITAS
     </a>
 </div>
